# deepblog

./: README.md
Arhitecture/搜推广/: 参考文档.md
Arhitecture/直播/: 参考文档.md
OpenSource/Flutter/: 1.0 Flutter概览.md  1.1 Flutter架构概览.md  1.2 安装.md  2.0 Dart入门.md  2.1 Widget.md  2.2 布局.md  2.3 状态管理.md  2.4 用户输入.md  2.5 网络和数据.md  2.6 本地数据和缓存.md
OpenSource/ceph/: 01-ceph-是什么-从单机文件系统思维切换到分布式存储思维.md  02-ceph-总体架构图解-MON-MGR-OSD-MDS-RGW-各自负责什么.md  03-部署一个最小可用-Ceph-集群-从节点角色到-cephadm-编排.md  04-Rook-架构与实现-Kubernetes-中如何编排和管理-Ceph-集群.md  05-Ceph-源码仓库怎么读-目录结构-构建系统与第一批核心模块.md  06-从一次写请求看-Ceph-客户端到落盘的主路径总览.md  07-MON-原理与源码-集群地图-选举-Quorum-为什么是-Ceph-的大脑.md  08-MGR-原理与源码-为什么-Ceph-需要管理平面与插件生态.md  09-Ceph-Dashboard-架构与实现-管理界面-REST-API-与前后端协作.md  10-OSD-进程详解-Ceph-最核心的数据面执行单元.md  11-CRUSH-算法讲透-Ceph-为什么能不依赖中心元数据做数据定位.md  12-PG-是-Ceph-的灵魂-为什么不是直接把对象映射到-OSD.md  13-客户端-IO-路径源码-librados-消息层-对象操作是如何发出去的.md  14-Ceph-消息通信层-Messenger-Connection-Dispatch-机制详解.md  15-BlueStore-设计与源码-Ceph-为什么放弃-FileStore.md  16-对象写入落盘全过程-事务-日志-提交语义与一致性保证.md  17-RADOS-EC-实现详解-纠删码池-条带布局与读改写流程.md  18-RBD-架构入门-Ceph-块存储是如何建立在-RADOS-之上的.md  19-RBD-读写路径源码-一次块设备-IO-如何落到-Ceph-集群.md  20-RBD-高级特性详解-快照-克隆-特性位与镜像元数据设计.md  21-RBD-性能测试实战-基准方法-压测工具与指标拆解.md  22-RBD-性能调优指南-客户端-网络-OSD-与-BlueStore-的联动优化.md  23-CephFS-架构总览-MDS-客户端与对象存储如何协作.md  24-CephFS-MDS-核心实现-请求状态机-子树划分与多-MDS-协调.md  25-CephFS-元数据缓存与一致性-inode-dentry-cap-和-session-如何协作.md  26-CephFS-日志与恢复机制-MDLog-Journal-故障切换与回放源码.md  27-CephFS-客户端通用实现-src-client-里的-inode-dentry-与-cap-机制.md  (+15 more)
Planguage/C++/: 资源和细节.md  (+19 more)
Planguage/C++/source/coroutine/: CMakeLists.txt  README.md  mini_coroutine.cpp
(+169 files in other folders)
